#Settings for packaging the project with setuptools, for distribution with PyPI.
#For just using a local version of the code this can be safely ignored

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LSDpy"
version = "0.4.6"
authors = [ { name="Colin Folsom", email="fosomcp+dev@gmail.com" },
]
description = "Least Squares Deconvolution for spectropolarimetric analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/folsomcp/LSDpy"
Documentation = "https://folsomcp.github.io/specpolFlow/"

[project.scripts]
lsdpy = "LSDpy.lsdpy:lsd_cli"
